# fruits360-ml-gpu

./: .README.md.swp  .gitignore  .gitignore.swp  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: TEST_eval_summary 2.json  TEST_eval_summary.json  TEST_per_class_accuracy.csv  TEST_top_confused_pairs.json  baseline_20251023-144522.manifest.json  baseline_20251023-151206.manifest.json  baseline_20251023-152709.manifest.json  baseline_20251023-153628.manifest.json  baseline_20251023-160125.manifest.json  baseline_20251023-195524.manifest.json  baseline_20251023-195621.manifest.json  baseline_20251023-200420.manifest.json  baseline_20251025-230444.manifest 2.json  baseline_20251025-232240.manifest.json  baseline_20251025-232834.manifest.json  baseline_20251026-062235.manifest.json  baseline_20251026-091111.manifest.json  baseline_20251026-102007.manifest.json  baseline_20251026-131323.manifest.json  baseline_20251026-133050.manifest.json  baseline_20251026-135546.manifest.json  baseline_20251026-145510.manifest.json  baseline_20251026-152127.manifest.json  config-summary.txt  eval_metrics.json  hashes_20251023-153628.txt  hashes_20251023-200420.txt  hashes_20251025-225934 2.txt  hashes_20251025-232240.txt  hashes_20251026-062235.txt  hashes_20251026-091111.txt  hashes_20251026-102007.txt  hashes_20251026-131323.txt  hashes_20251026-135546.txt  requirements.txt  train_log.csv
artifacts-cpu only/: eval_metrics.json  train_history.csv
artifacts-run-with argumentation pading made GPU/: class_names.json  eval_metrics.json  train_history.csv
scripts/: download_data.sh  eval_quickcheck.py  fruits360trainingworkflow.py  mobilenetv2_architecture_diagram_generator.py  setup_env.ps1  setup_env.sh  snapshot_baseline.sh
src/fruits360/: config.py  data.py  eval.py  infer.py  model.py  plot.py  train.py  utils.py
src/fruits360.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
