# pyproject.toml
# ===========================================================
# Project metadata and build configuration for fruits360-ml-gpu
# Supports modern Python packaging (PEP 621) and editable installs.
# ===========================================================

[project]
name = "fruits360"
version = "2.2.3"
description = "Fruit image classification project using TensorFlow/Keras with GPU/CPU auto-detection."
authors = [
    { name = "Jason Tan", email = "chencxf12369@gmail.com" }
]
# Optional but handy metadata (safe to keep minimal)
readme = { text = "Fruits-360 training utilities", content-type = "text/plain" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["tensorflow", "keras", "image-classification", "fruit360", "deep-learning", "transfer-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: TensorFlow"
]

dependencies = [
    "tensorflow>=2.15.0",
    "keras>=2.15.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "mypy"
]

[project.urls]
Homepage = "https://github.com/chencxf12369/fruits360-ml-gpu"
Repository = "https://github.com/chencxf12369/fruits360-ml-gpu"
Issues = "https://github.com/chencxf12369/fruits360-ml-gpu/issues"

# ===========================================================
# Build backend
# ===========================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ===========================================================
# setuptools configuration (src layout, package discovery)
# ===========================================================
[tool.setuptools]
package-dir = { "" = "src" }
#Explicitly include our package (and any subpackages/modules)
[tool.setuptools.packages.find]
where = ["src"]
include = ["fruits360*"]
exclude = ["tests*", "docs*"]

# If you keep non-.py files under the package later, uncomment:
# [tool.setuptools.package-data]
# "fruits360" = ["*.json", "*.csv", "*.txt", "assets/*"]

# ===========================================================
# Linting / Formatting / Type checking tools
# ===========================================================
[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
